Z-index fix

--- a/static/sass/music.sass
+++ b/static/sass/music.sass
@@ -15,6 +15,8 @@
       font-size: 1.5em !important
 
 .outer-music-video-wrapper
+  position: relative
+  z-index: 1
   margin: 1em auto
   max-width: 60em
 
